force-app/main/default/objects/NEO_Event__c/NEO_Event__c.object-meta.xml
<CustomObject>
    <label>医学活动</label>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>Event No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>