force-app/main/default/objects/NEO_Event__c/fields/NEO_Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>NEO_Approval_Step__c</fullName>
    <label>Approval Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>