force-app/main/default/objects/NEO_Event__c/fields/NEO_Approver1__c.field-meta.xml
<CustomField>
    <fullName>NEO_Approver1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver1</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>NEO Events (Approver1)</relationshipLabel>
    <relationshipName>NEO_Events_Approver1</relationshipName>
    <type>Lookup</type>
</CustomField>