force-app/main/default/objects/NEO_Event__c/fields/NEO_Approver2__c.field-meta.xml
<CustomField>
    <fullName>NEO_Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver2</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>NEO Events</relationshipLabel>
    <relationshipName>NEO_Events</relationshipName>
    <type>Lookup</type>
</CustomField>