force-app/main/default/objects/NEO_Event__c/fields/NEO_Current_Approver_Text_ID__c.field-meta.xml
<CustomField>
    <fullName>NEO_Current_Approver_Text_ID__c</fullName>
    <label>Current Approver Text ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>