force-app/main/default/objects/NEO_Event__c/fields/NEO_End_Time__c.field-meta.xml
<CustomField>
    <fullName>NEO_End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>