force-app/main/default/objects/NEO_Event__c/fields/NEO_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>NEO_Event_Name__c</fullName>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>