force-app/main/default/objects/NEO_Event__c/fields/NEO_Event_No__c.field-meta.xml
<CustomField>
    <fullName>NEO_Event_No__c</fullName>
    <displayFormat>E-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Event No.</label>
    <type>AutoNumber</type>
</CustomField>