force-app/main/default/objects/NEO_Event__c/fields/NEO_HCP_Attendee_No__c.field-meta.xml
<CustomField>
    <fullName>NEO_HCP_Attendee_No__c</fullName>
    <label>HCP Attendee No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>