force-app/main/default/objects/NEO_Event__c/fields/NEO_Hospital__c.field-meta.xml
<CustomField>
    <fullName>NEO_Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events(Hospital)</relationshipLabel>
    <relationshipName>NEO_Events</relationshipName>
    <type>Lookup</type>
</CustomField>