force-app/main/default/objects/NEO_Event__c/fields/NEO_Last_Audit_Operation_Date__c.field-meta.xml
<CustomField>
    <fullName>NEO_Last_Audit_Operation_Date__c</fullName>
    <label>Last Audit Operation Date</label>
    <type>DateTime</type>
</CustomField>