force-app/main/default/objects/NEO_Event__c/fields/NEO_Location__c.field-meta.xml
<CustomField>
    <fullName>NEO_Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>