force-app/main/default/objects/NEO_Event__c/fields/NEO_Notes__c.field-meta.xml
<CustomField>
    <fullName>NEO_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>