force-app/main/default/objects/NEO_Event__c/fields/NEO_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>NEO_Owner_Name__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>