force-app/main/default/objects/NEO_Event__c/fields/NEO_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>NEO_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>