force-app/main/default/objects/NEO_Event__c/fields/NEO_Status__c.field-meta.xml
<CustomField>
    <fullName>NEO_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan_Draft</fullName>
                <label>Plan Draft</label>
            </value>
            <value>
                <fullName>Plan_Pending_Approval</fullName>
                <label>Plan Pending Approval</label>
            </value>
            <value>
                <fullName>Plan_Approved</fullName>
                <label>Plan Approved</label>
            </value>
            <value>
                <fullName>Plan_Rejected</fullName>
                <label>Plan Rejected</label>
            </value>
            <value>
                <fullName>Report_Draft</fullName>
                <label>Report Draft</label>
            </value>
            <value>
                <fullName>Report_Pending_Approval</fullName>
                <label>Report Pending Approval</label>
            </value>
            <value>
                <fullName>Report_Approved</fullName>
                <label>Report Approved</label>
            </value>
            <value>
                <fullName>Report_Rejected</fullName>
                <label>Report Rejected</label>
            </value>
            <value>
                <fullName>Follow_Up</fullName>
                <label>Follow Up</label>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>