force-app/main/default/objects/NEO_Event__c/fields/NEO_Total_Employee_Paid_Expense__c.field-meta.xml
<CustomField>
    <fullName>NEO_Total_Employee_Paid_Expense__c</fullName>
    <label>Total Employee Paid Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>