force-app/main/default/objects/NEO_Event__c/fields/NEO_Total_Speaker_Fee__c.field-meta.xml
<CustomField>
    <fullName>NEO_Total_Speaker_Fee__c</fullName>
    <label>Total Speaker Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>