force-app/main/default/objects/NEO_Event__c/recordTypes/NEO_Cross_Hospital_Event.recordType-meta.xml
<RecordType>
    <fullName>NEO_Cross_Hospital_Event</fullName>
    <active>true</active>
    <description>CN: HCP event that involve HCPs from multiple hospitals</description>
    <label>Cross Hospital Event</label>
</RecordType>