force-app/main/default/objects/NEO_Event__c/recordTypes/NEO_Department_Hospital_Event.recordType-meta.xml
<RecordType>
    <fullName>NEO_Department_Hospital_Event</fullName>
    <active>true</active>
    <description>CN: HCP event that involve HCPs from the same hospital</description>
    <label>Department / Hospital Event</label>
</RecordType>