force-app/main/default/objects/NEO_Event__c/recordTypes/NEO_Internal_Training_Event.recordType-meta.xml
<RecordType>
    <fullName>NEO_Internal_Training_Event</fullName>
    <active>true</active>
    <description>CN: Internal Training Event</description>
    <label>Internal Training Event</label>
</RecordType>