force-app/main/default/objects/NEO_Event__c/recordTypes/NEO_Patient_Education_Event.recordType-meta.xml
<RecordType>
    <fullName>NEO_Patient_Education_Event</fullName>
    <active>true</active>
    <description>CN: Patient Education Event</description>
    <label>Patient Education Event</label>
</RecordType>