force-app/main/default/objects/NEO_Event__c/recordTypes/NEO_Petty_Expense_Event.recordType-meta.xml
<RecordType>
    <fullName>NEO_Petty_Expense_Event</fullName>
    <active>true</active>
    <description>CN: Petty Expense Event used to claim expenses incurred for external experts</description>
    <label>Petty Expense Event</label>
</RecordType>