force-app/main/default/objects/NEO_Event__c/recordTypes/NEO_Third_Party_Event.recordType-meta.xml
<RecordType>
    <fullName>NEO_Third_Party_Event</fullName>
    <active>true</active>
    <description>CN: Third Party Event used to claim field force expenses incurred related to the 3rd party events</description>
    <label>Third Party Event</label>
</RecordType>