force-app/main/default/objects/NEO_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NEO_Event_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NEO_Start_Time__c</columns>
    <columns>NEO_End_Time__c</columns>
    <columns>NEO_Location__c</columns>
    <columns>NEO_Hospital__c</columns>
    <columns>NEO_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>