force-app/main/default/objects/NEO_Event__c/listViews/ChatQueue_NEO_Event.listView-meta.xml
<ListView>
    <fullName>ChatQueue_NEO_Event</fullName>
    <filterScope>Queue</filterScope>
    <label>ChatQueue</label>
    <queue>ChatQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>